Sat Apr 12 15:14:05 MDT 2008
	 Restructured the code (curl-testcases and zzuf testcases
	 are now in different directories; code examples are in
	 src/examples/).
	 Fixed a problem (introduced in 0.2.3) with handling very 
	 large requests (the code did not return proper error code).
	 If "--enable-messages" is specified, the code now includes
	 reasonable default HTML webpages for various build-in
	 errors (such as request too large and malformed requests).
	 Without that flag, the webpages returned will still be
	 empty.
	 Added zzuf-based fuzzing-testcases (these require the
	 zzuf and socat binaries to be installed).

Fri Apr 11 20:20:34 MDT 2008
	 I hereby dub libmicrohttpd a GNU package. -Richard Stallman

Sat Mar 29 22:36:09 MDT 2008
	 Fixed bugs in handling of malformed HTTP requests
	 (causing either NULl dereferences or connections to
	 persist until time-out, if any). -CG

	 Updated and integrated TexInfo documentation. -CG

Tue Mar 25 13:40:53 MDT 2008
	 Prevent multi-part post-processor from going to error 
	 state when the input buffer is full and current token 
	 just changes processor state without consuming any data.
	 Also, the original implementation would not consume any 
	 input in process_value_to_boundary if there is no new 
	 line character in sight. -AS

	 Remove checks for request method after it finished writing
	 response footers as it's only _pipelined_ requests that 
	 should not be allowed after POST or PUT requests.  Reusing 
	 the existing connection is perfectly ok though.  And there 
	 is no reliable way to detect pipelining on server side
	 anyway so it is the client's responsibility to not send new 
	 data before it gets a response after a POST operation. -AS

	 Clarified license in man page. Releasing 
         libmicrohttpd 0.2.3 -CG

Sat Mar 22 01:12:38 MDT 2008
	 Releasing libmicrohttpd 0.2.2. -CG

Mon Feb 25 19:13:53 MST 2008
	 Fixed a problem with sockets closed for reading ending up