@@ -4,11 +4,16 @@ INCLUDES = -I$(top_srcdir)/src/include
 
 # example programs
 
-noinst_PROGRAMS = minimal_example fileserver_example
+noinst_PROGRAMS = minimal_example querystring_example fileserver_example
 
 minimal_example_SOURCES = \
  minimal_example.c 
 minimal_example_LDADD = \
+ $(top_builddir)/src/daemon/libmicrohttpd.la 
+
+querystring_example_SOURCES = \
+ querystring_example.c 
+querystring_example_LDADD = \
  $(top_builddir)/src/daemon/libmicrohttpd.la 
 
 fileserver_example_SOURCES = \
