@@ -41,8 +41,12 @@ static int oneone;
  * Do not make this much larger since we will hit the
  * MHD default buffer limit and the test code is not
  * written for incremental upload processing...
+ * (larger values will likely cause MHD to generate
+ * an internal server error -- which would be avoided
+ * by writing the putBuffer method in a more general
+ * fashion).
  */
-#define PUT_SIZE (512 * 1024)
+#define PUT_SIZE (256 * 1024)
 
 static char *put_buffer;
 
@@ -390,11 +394,8 @@ main (int argc, char *const *argv)
     return 2;
   put_buffer = malloc (PUT_SIZE);
   memset (put_buffer, 1, PUT_SIZE);
-  if (0)
-    {
-      errorCount += testInternalPut ();
-      errorCount += testMultithreadedPut ();
-    }
+  errorCount += testInternalPut ();
+  errorCount += testMultithreadedPut ();
   errorCount += testExternalPut ();
   free (put_buffer);
   if (errorCount != 0)
